--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,24 @@
   command = "npm run build"
   publish = "dist"
 
+# Serve static files before SPA fallback
+[[redirects]]
+  from = "/robots.txt"
+  to = "/robots.txt"
+  status = 200
+
+[[redirects]]
+  from = "/og-image.png"
+  to = "/og-image.png"
+  status = 200
+
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
+
+# Allow social media crawlers
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Robots-Tag = "all"
