--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.95.3",
-    "howler": "^2.2.4"
+    "howler": "^2.2.4",
+    "posthog-node": "^5.26.0"
   }
 }
